--- a/secureVault/regis/templates/regis/login.html
+++ b/secureVault/regis/templates/regis/login.html
@@ -1,11 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Login</h2>
-<form method="POST">
-    {% csrf_token %}
-    <input type="email" name="email" placeholder="abc@gmail.com" required><br><br>
-    <input type="password" name="password" placeholder="Password" required><br><br>
-    <button type="submit">Login</button>
-</form>
+<div class="center-page"?\>
+<div class="card">
+    <h2>Login</h2>
+ {% if messages %}
+  <div style="max-width:400px;margin:15px auto;">
+    {% for message in messages %}
+      <p style="color:red;text-align:center;">{{ message }}</p>
+    {% endfor %}
+  </div>
+{% endif %}
+    <form method="POST">
+        {% csrf_token %}
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+    </form>
+
+    <div class="small">
+        Don’t have an account?
+        <a href="{% url 'register' %}">Register</a>
+    </div>
+</div>
+</div>
 {% endblock %}
