--- a/secureVault/regis/templates/regis/register.html
+++ b/secureVault/regis/templates/regis/register.html
@@ -1,13 +1,24 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
-<h2>Register</h2>
-<form method="POST">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Username" required><br><br>
-    <input type="email" name="email" placeholder="Email" required><br><br>
-    <input type="password" name="password1" placeholder="Password" required><br><br>
-    <input type="password" name="password2" placeholder="Confirm Password" required><br><br>
-    <button type="submit">Register</button>
-</form>
+<div class="center-page">
+<div class="card">
+    <h2>Register</h2>
+
+    <form method="POST">
+        {% csrf_token %}
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="email" name="email" placeholder="Email" required>
+        <input type="password" name="password1" placeholder="Password" required>
+        <input type="password" name="password2" placeholder="Confirm Password" required>
+        <button type="submit">Register</button>
+    </form>
+
+    <div class="small">
+        Already have an account?
+        <a href="{% url 'login' %}">Login</a>
+    </div>
+</div>
+</div>
 {% endblock %}
